# modelfit

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSES.md  MODEL_LICENSES.yaml  Makefile  README.md  SECURITY.md  compose.gpu.yaml  compose.yaml  coverage.xml  pyproject.toml
.devcontainer/: Dockerfile  compose.devcontainer.yaml  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
configs/: mcp_servers.yaml  models.yaml
configs/prompts/: README.md
configs/rubrics/: general_communication_v1.yaml
docs/adr/: 0001-modular-monolith.md  0002-governed-mcp-boundary.md
docs/architecture/: README.md
docs/research/: model-runtime-compatibility.md
infra/docker/: api.Dockerfile  mcp.Dockerfile  mlflow.Dockerfile  ui.Dockerfile  worker.Dockerfile
infra/helm/modelfit/: Chart.yaml  values.yaml
migrations/: README.md  env.py
migrations/versions/: 3c6ddcf6100e_add_initial_persistence_schema.py
scripts/: bootstrap-dev.sh  verify-dev.sh
services/mcp_document/: server.py
services/mcp_image/: server.py
services/mcp_web/: server.py
src/modelfit/api/: cli.py  main.py
src/modelfit/api/routes/: health.py  runs.py
src/modelfit/core/: config.py  logging.py  schemas.py
src/modelfit/evaluation/: base.py  deterministic.py
src/modelfit/mcp/: __init__.py  client.py  policy.py  schemas.py
src/modelfit/models/: gateway.py  registry.py
src/modelfit/observability/: tracing.py
src/modelfit/orchestration/: graph.py  state.py
src/modelfit/security/: files.py
src/modelfit/storage/: base.py  database.py  models.py  object_store.py
src/modelfit/ui/: app.py
src/modelfit/worker/: celery_app.py  cli.py  tasks.py
tests/integration/: README.md
tests/integration/storage/: test_migrations.py
tests/unit/: test_database.py  test_graph.py  test_health.py  test_mcp_policy.py  test_model_registry.py  test_storage_models.py
