[project]
name = "modelfit"
version = "0.1.0"
description = "A business-friendly LLM evaluation sandbox."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.18.5",
  "asyncpg>=0.31.0",
  "celery[redis]>=5.6.3",
  "fastapi>=0.139.2",
  "httpx>=0.28.1",
  "langgraph>=1.2.9",
  "langchain-mcp-adapters>=0.3.0,<1",
  "mcp[cli]>=1.28.1,<2",
  "minio>=7.2.20",
  "openai>=2.46.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "pyyaml>=6.0.3",
  "redis>=8.0.1",
  "sqlalchemy[asyncio]>=2.0.51",
  "streamlit>=1.59.2",
  "structlog>=26.1.0",
  "tenacity>=9.1.4",
  "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "pip-audit>=2.10.1",
  "mypy>=2.3.0",
  "pre-commit>=4.6.0",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.22",
  "types-pyyaml>=6.0.12.20260518",
]
documents = [
  "docling>=2.113.0",
]
evaluation = [
  "ragas>=0.4.3",
]
mlops = [
  "mlflow>=3.14.0",
]

[project.scripts]
modelfit-api = "modelfit.api.cli:main"
modelfit-worker = "modelfit.worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelfit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
  "integration: tests requiring containers or external services",
  "gpu: tests requiring a GPU model server",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[tool.coverage.run]
source = ["src/modelfit"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true


[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["modelfit.worker.tasks"]
disallow_untyped_decorators = false
